--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Guess The Rank project",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
     "dev": "nodemon server"
   },
   "repository": {
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Fadis-0/GTR#readme",
   "dependencies": {
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.0"
   }
 }
